@@ -1,7 +1,0 @@
-#! /bin/bash
-
-dropdb -Upydotest pydotest
-dropuser -Upostgres pydotest
-createuser -A -d -Upostgres pydotest
-createdb -Upydotest pydotest
-psql -Upydotest -dpydotest < postgres.sql
